# Chessy2k

./: .gitattributes  .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  app.py  pyproject.toml  requirements.txt  start_chessy_overlay.bat
config/: default.yaml
data/: .gitkeep
data/openings/: README.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEVELOPMENT.md  ENGINES.md
docs/i18n/: README_es.md
engines/: README.md
scripts/: setup_maia3.py
src/: __init__.py
src/app/: __init__.py  analysis_worker.py  api.py  board_watcher.py  capture_service.py  cli.py  config.py  elo_power.py  errors.py  fast_analyzer.py  logging_config.py  overlay_theme.py  reckless_path.py  region_coords.py  (+6 more)
tests/: conftest.py  test_analysis_worker.py  test_board_orientation.py  test_board_watcher.py  test_board_watcher_pending.py  test_capture_service.py  test_elo_power.py  test_fast_analyzer_robustness.py  test_fen_generation.py  test_fen_repair.py  test_human_engine.py  test_human_move_selector.py  test_legal_tracker.py  test_maia3_client.py  test_maia3_timing.py  test_maia_eval.py  test_move_encoding.py  test_opening_book.py  test_operation_repair.py  test_overlay_engine_choices.py  test_overlay_settings.py  test_reckless_client.py  test_region_coords.py  test_screen_capture.py  test_screenshot_to_fen.py  test_square_diff.py  test_state_tracker_extended.py  test_stockfish_client.py  test_stockfish_game_over.py  test_stockfish_robustness.py  test_strategic_features.py  test_turn_infer.py  test_turn_infer_extended.py  test_turn_infer_hang.py  test_ui_qt.py  test_zobrist.py
(+46 files in other folders)
