[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chessy"
version = "0.2.0"
description = "Local screenshot-to-move chess assistant with Stockfish, Reckless, and Maia-3"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Chessy" }]
dependencies = [
    "torch>=2.3",
    "torchvision>=0.18",
    "opencv-python>=4.9",
    "python-chess>=1.10",
    "Pillow>=10.3",
    "PySide6>=6.6",
    "mss>=9.0",
    "cairosvg>=2.7",
    "numpy>=1.26",
    "fastapi>=0.111",
    "uvicorn>=0.29",
    "tqdm>=4.66",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[project.scripts]
chessy = "src.app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests that require local engine binaries",
]
